<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_rectangle"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_profile_back" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pic"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/description_profile_picture"
                android:src="@drawable/circle_red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pic"
                tools:text="Anton Pronkin" />

            <TextView
                android:id="@+id/syncStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:drawableStart="@drawable/ic_check_sync"
                android:drawablePadding="8dp"
                android:text="Synced with 32/129 peers"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:text="Synced with 32/129 peers" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/syncStatus" />

            <TextView
                android:id="@+id/switchProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/switch_profile"
                android:textColor="#ACA996"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/keyIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_key"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/firstArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_open"
                app:layout_constraintBottom_toBottomOf="@+id/keychainPhrase"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/keychainPhrase" />

            <TextView
                android:id="@+id/keychainPhrase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="8dp"
                android:text="@string/keychain_phrase"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/keyIcon"
                app:layout_constraintEnd_toStartOf="@+id/firstArrow"
                app:layout_constraintStart_toEndOf="@+id/keyIcon"
                app:layout_constraintTop_toTopOf="@+id/keyIcon" />

            <View
                android:id="@+id/firstDivider"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="@+id/firstArrow"
                app:layout_constraintStart_toStartOf="@+id/keychainPhrase"
                app:layout_constraintTop_toBottomOf="@+id/keychainPhrase" />

            <ImageView
                android:id="@+id/pinCodeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_pin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstDivider" />

            <ImageView
                android:id="@+id/secondArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_open"
                app:layout_constraintBottom_toBottomOf="@+id/pinCodeText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/pinCodeText" />

            <TextView
                android:id="@+id/pinCodeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="8dp"
                android:text="@string/pin_code"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/pinCodeIcon"
                app:layout_constraintEnd_toStartOf="@+id/secondArrow"
                app:layout_constraintStart_toEndOf="@+id/pinCodeIcon"
                app:layout_constraintTop_toTopOf="@+id/pinCodeIcon" />

            <View
                android:id="@+id/secondDivider"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="@+id/secondArrow"
                app:layout_constraintStart_toStartOf="@+id/pinCodeText"
                app:layout_constraintTop_toBottomOf="@+id/pinCodeText" />

            <ImageView
                android:id="@+id/clockIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_clock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondDivider" />

            <Switch
                android:id="@+id/updateToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/updatesText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/updatesText" />

            <TextView
                android:id="@+id/updatesText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="8dp"
                android:text="@string/updates"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/clockIcon"
                app:layout_constraintEnd_toStartOf="@+id/updateToggle"
                app:layout_constraintStart_toEndOf="@+id/clockIcon"
                app:layout_constraintTop_toTopOf="@+id/clockIcon" />

            <View
                android:id="@+id/thirdDivider"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="@+id/updateToggle"
                app:layout_constraintStart_toStartOf="@+id/updatesText"
                app:layout_constraintTop_toBottomOf="@+id/updatesText" />

            <ImageView
                android:id="@+id/invitesIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_invite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thirdDivider" />

            <Switch
                android:id="@+id/invitesToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/invitesText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/invitesText" />

            <TextView
                android:id="@+id/invitesText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="8dp"
                android:text="Invites"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/invitesIcon"
                app:layout_constraintEnd_toStartOf="@+id/invitesToggle"
                app:layout_constraintStart_toEndOf="@+id/invitesIcon"
                app:layout_constraintTop_toTopOf="@+id/invitesIcon" />

            <View
                android:id="@+id/fourthDivider"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                android:background="@color/divider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/invitesToggle"
                app:layout_constraintStart_toStartOf="@+id/invitesText"
                app:layout_constraintTop_toBottomOf="@+id/invitesText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/log_out"
            android:textColor="#E1320A"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

</LinearLayout>